--- a/src/styles/content.scss
+++ b/src/styles/content.scss
@@ -21,13 +21,15 @@ header {
 }
 
 main {
+  display: flex;
+  height: 100%;
   width: 100%;
   margin-top: 5.625rem;
 
   .movies-list {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 4.75rem;
-    list-style: none;
+    display: flex;
+    flex: 1;
+    height: 100%;
+    width: 100%;
   }
 }
